--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "webpack-cli": "^4.7.2"
   },
   "devDependencies": {
+    "mini-css-extract-plugin": "^2.1.0",
     "sass": "^1.36.0",
     "sass-loader": "^12.1.0",
     "terser-webpack-plugin": "^5.1.4"
