--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@babel/preset-env": "^7.14.8",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
+    "handlebars": "^4.7.7",
     "save-dev": "0.0.1-security",
     "style-loader": "^3.2.1",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "handlebars-loader": "^1.7.1",
+    "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.1.0",
     "sass": "^1.36.0",
     "sass-loader": "^12.1.0",
